# display-driver-library-for-embedded

./: .gitignore  CMakeLists.txt  README.md
display/: display.h  display_conf.h
display/backlight/: backlight.c  backlight.h  backlight_ctrl.c  disp_backlight.c  disp_backlight.h
display/common/: display_config.h  display_log.h
display/core/: display.c  display.h  display_factory.c  display_factory.h
display/painter/: disp_painter.c  disp_painter.h
display/panel/: disp_panel.c  disp_panel.h  panel_com.c  panel_com.h  panel_simple.c  panel_simple.h  panel_st7735.c  panel_st7735.h
display/panel/interga/: panel_com.c  panel_com.h  panel_st7735.c  panel_st7735.h
display/port/: disp_backlight_port.c  disp_panel_spi_port.c  disp_panel_spi_port.h
display/porting/: display_port_backlight.c  display_port_backlight.h  display_port_spi.c  display_port_spi.h
docs/: project-directory.md
sgfx/backlight/: backlight_ctrl.c  backlight_ctrl.h  sgfx_backlight.c  sgfx_backlight.h
sgfx/common/: sgfx_config.h  sgfx_log.c  sgfx_log.h
sgfx/display/: sgfx_display.c  sgfx_display.h
sgfx/interface/: sgfx_spi.c  sgfx_spi.h
sgfx/panel/: panel_com.c  panel_com.h  panel_st7735.c  panel_st7735.h
sgfx/panel/command/: sgfx_lcd.c  sgfx_lcd.h  sgfx_st7735.c  sgfx_st7735.h
sgfx/panel/video/: sgfx_framebuffer.h
sgfx/porting/: sgfx_port_backlight.c  sgfx_port_backlight.h  sgfx_port_spi.h
tests/: CMakeLists.txt  test.c
